# shitbox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-boot-recovery/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-watchdog-and-self-healing/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-thermal-resilience-and-storage-management/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-remote-health-and-stage-tracking/: 04-01-PLAN.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: config.yaml
grafana/dashboards/: shitbox-telemetry.json
scripts/: imu_test.py  install.sh  shitbox-health.sh  test-alert.sh  test-speaker.sh  trigger-capture.sh
src/shitbox/: __init__.py
systemd/: shitbox-telemetry.service
tests/: conftest.py  test_boot_recovery.py  test_buzzer_alerts.py  test_capture_integrity.py  test_database.py  test_engine_boot.py  test_ffmpeg_stall.py  test_health_collector.py  test_i2c_recovery.py  test_speaker_alerts.py  test_thermal_monitor.py  test_trip_tracking.py  test_watchdog.py
(+54 files in other folders)
